--- a/photo-tagging/package.json
+++ b/photo-tagging/package.json
@@ -1,7 +1,8 @@
 {
     "name": "photo-tagging",
     "version": "0.1.0",
-    "private": true,
+    "homepage": "https://TymeeK.github.io/photo-tagging-app",
+    "private": false,
     "dependencies": {
         "@csstools/normalize.css": "^12.0.0",
         "@testing-library/jest-dom": "^5.16.2",
@@ -17,6 +18,8 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "FAST_REFRESH=false react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -39,5 +42,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^3.2.3"
     }
 }
